# gradio_huggingfacehub_search

./: README.md  pyproject.toml
backend/gradio_huggingfacehub_search/: __init__.py  huggingfacehubsearch.py
demo/: space.py
frontend/: Index.svelte  app.css.tailwind  output.css  package-lock.json  package.json  tailwind.config.js
frontend/src/QuickSearch/: QuickSearch.svelte
