[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_huggingfacehub_search"
version = "0.0.7"
description = "Simple component for creating prompt weighting for real-time generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Radamés Ajna", email = "radamajna@gmail.com" }]
keywords = ["gradio-custom-component", "huggingface", "hub", "search"]
# Add dependencies here
dependencies = ["gradio>=4.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.urls]
repository = "https://github.com/radames/gradio_huggingfacehub_search"
space = "https://huggingface.co/spaces/radames/gradio_huggingfacehub_search"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_huggingfacehub_search/templates", "*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_huggingfacehub_search"]
